# controllers/customerController.js
@@ -1,12 +1,18 @@
 const Customer = require('../models/customerModel');
+const Employee = require('../models/employeeModel');
+const Owner = require('../models/ownerModel');
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
+const { Op } = require('sequelize');
 
 // Get all customers
 exports.getCustomers = async (req, res) => {
     // #swagger.tags = ['customer']
     try {
         const customers = await Customer.findAll();
+        customers.forEach(r => {
+            r.password = ''
+        })
         res.json(customers);
     } catch (err) {
         res.status(500).json({ message: 'Error fetching customers', error: err.message });
@@ -32,17 +38,23 @@ exports.getCustomerById = async (req, res) => {
 // Create a new customer
 exports.createCustomer = async (req, res) => {
     // #swagger.tags = ['customer']
-    const { name, username, password, email, mobile, work, ssn, service, card, cvv, exp } = req.body;
+    const { name, username, password, email, mobile, work } = req.body;
 
     try {
-        const existingCustomerUser = await Customer.findOne({ where: { username } });
+                   
         const existingCustomerEmail = await Customer.findOne({ where: { email } });
+        const existingEmployeeEmail = await Employee.findOne({ where: { email } });
+        const existingOwnerEmail = await Owner.findOne({ where: { email } });
 
-        if (existingCustomerUser) {
+        const existingCustomerUser = await Customer.findOne({ where: { username } });
+        const existingEmployeeUser = await Employee.findOne({ where: { username } });
+        const existingOwnerUser = await Owner.findOne({ where: { username } });
+
+        if (existingCustomerUser || existingEmployeeUser || existingOwnerUser) {
             return res.status(400).json({ message: 'Username already exists' });
         }
 
-        if (existingCustomerEmail) {
+        if (existingCustomerEmail || existingEmployeeEmail || existingOwnerEmail) {
             return res.status(400).json({ message: 'Email already exists' });
         }
 
@@ -53,11 +65,12 @@ exports.createCustomer = async (req, res) => {
             email,
             mobile,
             work,
-            ssn,
+            verification: false
+            // ssn,
             // service,
-            card,
-            cvv,
-            exp,
+            // card,
+            // cvv,
+            // exp,
         });
 
         res.status(201).json({ message: 'Customer created successfully', customer: newCustomer });
@@ -70,7 +83,7 @@ exports.createCustomer = async (req, res) => {
 exports.updateCustomer = async (req, res) => {
     // #swagger.tags = ['customer']
     const { id } = req.params;
-    const { name, password, email, mobile, work, ssn, card, cvv, exp } = req.body;
+    const { name, username, password, email, mobile, work, verification } = req.body;
 
     try {
         const customer = await Customer.findByPk(id);
@@ -79,17 +92,61 @@ exports.updateCustomer = async (req, res) => {
             return res.status(404).json({ message: 'Customer not found' });
         }
 
-        const existingCustomerEmail = await Customer.findOne({ where: { email } });
+        const existingCustomerEmail = await Customer.findOne({
+            where: {
+                email,
+                id: {
+                    [Op.ne]: id,
+                },
+            }
+        });
+        const existingEmployeeEmail = await Employee.findOne({
+            where: {
+                email,
+            }
+        });
+        const existingOwnerEmail = await Owner.findOne({
+            where: {
+                email,
+            }
+        });
+        const existingCustomerUser = await Customer.findOne({
+            where: {
+                username,
+                id: {
+                    [Op.ne]: id,
+                },
+            }
+        });
+        const existingEmployeeUser = await Employee.findOne({
+            where: {
+                username,
+            }
+        });
+        const existingOwnerUser = await Owner.findOne({
+            where: {
+                username,
+            }
+        });                 
 
-        if (existingCustomerEmail) {
+        if (existingCustomerUser || existingEmployeeUser || existingOwnerUser) {
+            return res.status(400).json({ message: 'Username already exists' });
+        }
+
+        if (existingCustomerEmail || existingEmployeeEmail || existingOwnerEmail) {
             return res.status(400).json({ message: 'Email already exists' });
         }
+
+        // if (email && customer.email != email) {
+        //     customer.verification = false;
+        // }
 
         // Update customer fields
         customer.name = name || customer.name;
         customer.email = email || customer.email;
         customer.mobile = mobile || customer.mobile;
         customer.work = work || customer.work;
+        customer.verification = verification;
         // customer.service = service || customer.service;
 
         // Encrypt and update sensitive fields if provided
@@ -97,20 +154,20 @@ exports.updateCustomer = async (req, res) => {
             const salt = await bcrypt.genSalt(10);
             customer.password = await bcrypt.hash(password, salt);
         }
-        if (ssn) {
-            const salt = await bcrypt.genSalt(10);
-            customer.ssn = await bcrypt.hash(ssn, salt);
-        }
-        if (card) {
-            const salt = await bcrypt.genSalt(10);
-            customer.card = await bcrypt.hash(card, salt);
-        }
-        if (cvv) {
-            customer.cvv = cvv;
-        }
-        if (exp) {
-            customer.exp = exp;
-        }
+        // if (ssn) {
+        //     const salt = await bcrypt.genSalt(10);
+        //     customer.ssn = await bcrypt.hash(ssn, salt);
+        // }
+        // if (card) {
+        //     const salt = await bcrypt.genSalt(10);
+        //     customer.card = await bcrypt.hash(card, salt);
+        // }
+        // if (cvv) {
+        //     customer.cvv = cvv;
+        // }
+        // if (exp) {
+        //     customer.exp = exp;
+        // }
 
         await customer.save();
         res.json({ message: 'Customer updated successfully', customer });
